# fullstack-todo-app

./: .env.example  .gitignore  main.py  pyproject.toml
.claude/agents/: auth-security-specialist.md  fastapi-backend-builder.md  frontend-api-connector.md  nextjs-ui-builder.md  todo-business-logic.md
.claude/skills/api-client-integrator/: api-client-integrator.md
.claude/skills/auth-manager/: auth-manager.md
.claude/skills/backend-api-builder/: backend-api-builder.md
.claude/skills/frontend-ui-builder/: frontend-ui-builder.md
.claude/skills/todo-manager/: todo-manager.md
.specify/memory/: constitution.md
backend/: .dockerignore  .env.railway.example  .gitignore  DEPLOY_STEPS.md  Dockerfile  RAILWAY_DEPLOYMENT.md  init_db.py  pyproject.toml  start.sh
backend/migrations/: 001_initial_schema.py
backend/src/: main.py
backend/src/api/: auth.py  deps.py  tasks.py
backend/src/core/: config.py  database.py  security.py
backend/src/models/: task.py  user.py
backend/src/schemas/: auth.py  task.py
backend/src/services/: auth.py  task.py
frontend/: middleware.ts  next.config.ts  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/tasks/: page.tsx
frontend/components/auth/: LoginForm.tsx  SignupForm.tsx
frontend/components/home/: LandingPage.tsx  TodoDemo.tsx
frontend/components/layout/: Header.tsx  LogoutButton.tsx  PageContainer.tsx
specs/001-phase2-specs/: data-model.md  overview.md  plan.md  quickstart.md  research.md  tasks.md
(+16 files in other folders)
